=== HEAD

* Automatically save a new many_to_many associated object when associating the object via add_* (jeremyevans)

* Add a nested_attributes plugin for modifying associated objects directly through a model object (jeremyevans)

* Add an instance_hooks plugin for adding hooks to specific model instances (jeremyevans)

* Add a boolean_readers plugin for creating attribute? methods for boolean columns (jeremyevans)

* Add Dataset#ungrouped which removes existing grouping (jeremyevans)

* Make Dataset#group with nil or no arguments to remove existing grouping (dlee)

* Fix using multiple emulated ALTER TABLE statements (e.g. drop_column) in a single alter_table block on SQLite (jeremyevans)

* Don't allow inserting on a grouped dataset or a dataset that selects from multiple tables (jeremyevans)

* Allow class Item < Sequel::Model(DB2) to work (jeremyevans)

* Add Dataset#truncate for truncating tables (jeremyevans)

* Add Database#run method for executing arbitrary SQL on a database (jeremyevans)

* Handle index parsing correctly for tables in a non-default schema on JDBC (jfirebaugh)

* Handle unique index parsing correctly when connecting to MSSQL via JDBC (jfirebaugh)

* Add support for converting Time/DateTime to local or UTC time upon storage, retrieval, or typecasting (jeremyevans)

* Accept a hash when typecasting values to date, time, and datetime types (jeremyevans)

* Make JDBC adapter prepared statements support booleans, blobs, and potentially any type of object (jfirebaugh)

* Refactor the inflection support and modify the default inflections (jeremyevans, dlee)

* Make the serialization and lazy_attribute plugins add accessor methods to modules included in the class (jeremyevans)

* Make Database#schema on JDBC include a :column_size entry specifying the maximum length/precision for the column (jfirebaugh)

* Make Database#schema on JDBC accept a :schema option (dlee)

* Fix Dataset#import when called with a dataset (jeremyevans)
