@@ -1,5 +1,7 @@
 === HEAD
 
+* Allow validates_unique to take a block used to scope the uniqueness constraint (drfreeze, jeremyevans)
+
 * Automatically save a new many_to_many associated object when associating the object via add_* (jeremyevans)
 
 * Add a nested_attributes plugin for modifying associated objects directly through a model object (jeremyevans)
